reorg and got phone partially working with float:left

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank">
           Welcome to my portfolio page
         </a>
-      </span><br>If you require further info, feel free to <a href="mailto:edwinfcau@gmail.com">
+      </span><br>For further info, feel free to <a href="mailto:edwinfcau@gmail.com">
       <span style="text-decoration: underline; color: blue;">contact&nbsp;me</span></a>.</p>
     </td>
 
@@ -72,7 +72,7 @@
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()" style="position:relative;">
         <span class="popuptext" id="myPopup">
-          <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5176;</span>
+          <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5176;</span>
           <span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
@@ -125,7 +125,7 @@
   <div class="popupthree" onclick="myFunctionthree()">
     <span class="popuptextthree" id="myPopupthree">
       <span class="portfolionexttwo popuptwo" onclick="myFunctiontwo()">&#5176;</span>
-      <span class="portfolionexttwo popup9" onclick="myFunction9()">&#5171;</span>
+      <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5171;</span>
       <span class="close-btn-xy">&#10540;</span>
       <div class="click-zoom">
         <label>
@@ -139,9 +139,7 @@
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
         <p class="textforpopup">We curated a landing page for BLG that ties into the Google ads campaign featuring our top six practice groups that drew a broad audience and attracting over 3% click through rate. The Google ad campaign ended in 2022 and this landing page has since been deactivated.<br><br></p>
       </span>
-        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
-        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
-
+        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="margin-left: auto; margin-right: auto; opacity: 1;">
       </div>
     </td>
   </tr>
@@ -154,11 +152,11 @@
 
 <table class="threecoloumntables">
   <tr>
-    <td class="threebythreegrid" style="background: linear-gradient(#2A9243, #9198e5);  border: 5px solid #ffffff; width: calc(100% / 3 * 2);">
+    <td class="threebythreegrid" style="border: 5px solid #ffffff; width: calc(100% / 3 * 2);">
       <div class="popupfour" onclick="myFunctionfour()">
         <span class="popuptextfour" id="myPopupfour">
-        <span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&#5176;</span>
-        <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5171;</span>
+        <span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&#5176;</span>
+        <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5171;</span>
         <span class="close-btn-xy">&#10540;</span>
         <div class="click-zoom">
           <label>
@@ -175,8 +173,8 @@
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
 
       </div>
     </td>
@@ -185,8 +183,8 @@
     <td class="threebythreegrid" style="background: #00B5E2;  border: 5px solid #ffffff;">
       <div class="popup15" onclick="myFunction15()">
         <span class="popuptext15" id="myPopup15">
-          <span class="portfolionexttwo popup9" onclick="myFunction9()">&#5176;</span>
-          <span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&#5171;</span>
+          <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5176;</span>
+          <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
             <label>
@@ -219,7 +217,7 @@
     <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
       <div class="popup14" onclick="myFunction14()">
         <span class="popuptext14" id="myPopup14">
-          <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5176;</span>
+          <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span>
           <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
@@ -246,7 +244,7 @@
   <div class="popupfive" onclick="myFunctionfive()">
     <span class="popuptextfive" id="myPopupfive">
       <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span>
-      <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span>
+      <span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&#5171;</span>
       <span class="close-btn-xy">&#10540;</span>
       <div class="click-zoom">
         <label>
@@ -260,9 +258,7 @@
         <p class="textforpopup">Event eVite design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span>&nbsp;; Includes front page layout and RSVP form.</p>
 
       </span>
-    <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images blakesdotcomone" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
-    <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 1; padding-top:15%;">
-
+    <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
   </div>
 </td>
   </tr>
@@ -277,8 +273,8 @@
   <td class="threebythreegrid" style="background: #65fe08;  border: 5px solid #ffffff;">
     <div class="popupsix" onclick="myFunctionsix()">
       <span class="popuptextsix" id="myPopupsix">
-        <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span>
-        <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5171;</span>
+        <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5176;</span>
+        <span class="portfolionexttwo popup11" onclick="myFunction11()">&#5171;</span>
         <span class="close-btn-xy">&#10540;</span>
         <div class="click-zoom">
           <label>
@@ -299,8 +295,8 @@
     <td class="threebythreegrid" style="background: purple;  border: 5px solid #ffffff;">
       <div class="popup11" onclick="myFunction11()">
         <span class="popuptext11" id="myPopup11">
-          <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5176;</span>
-          <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5171;</span>
+          <span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&#5176;</span>
+          <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
             <label>
@@ -322,8 +318,8 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
     <div class="popup10" onclick="myFunction10()">
     <span class="popuptext10" id="myPopup10">
-    <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span>
-    <span class="portfolionexttwo popupup" onclick="myFunction()">&#5171;</span>
+    <span class="portfolionexttwo popup11" onclick="myFunction11()">&#5176;</span>
+    <span class="portfolionexttwo popupup9" onclick="myFunction9()">&#5171;</span>
     <span class="close-btn-xy">&#10540;</span>
     <div class="click-zoom">
       <label>
@@ -360,8 +356,8 @@
     <td class="threebythreegrid" style="background: #ffcba4;  border: 5px solid #ffffff;">
       <div class="popup9" onclick="myFunction9()">
         <span class="popuptext9" id="myPopup9">
-          <span class="portfolionexttwo popupthree" onclick="myFunctionthree()">&#5176;</span>
-          <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5171;</span>
+          <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5176;</span>
+          <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5171;</span>
           <span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
             <label>
@@ -390,8 +386,8 @@
         <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
           <div class="popupseven" onclick="myFunctionseven()">
             <span class="popuptextseven" id="myPopupseven">
-              <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5176;</span>
-              <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
+              <span class="portfolionexttwo popup9" onclick="myFunction9()">&#5176;</span>
+              <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5171;</span>
               <span class="close-btn-xy">&#10540;</span>
 
               <div class="click-zoom">
@@ -423,8 +419,8 @@
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup8" onclick="myFunction8()">
         <span class="popuptext8" id="myPopup8">
-          <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5176;</span>
-          <span class="portfolionexttwo popup11" onclick="myFunction11()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
+          <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5176;</span>
+          <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5171;</span><span class="close-btn-xy">&#10540;</span>
           <div class="click-zoom">
             <label>
               <input type="checkbox">
@@ -443,8 +439,8 @@
 <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
   <div class="popup13" onclick="myFunction13()">
     <span class="popuptext13" id="myPopup13">
-      <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5176;</span>
-      <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5171;</span>
+      <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5176;</span>
+      <span class="portfolionexttwo popup12" onclick="myFunction12()">&#5171;</span>
       <span class="close-btn-xy">&#10540;</span>
       <div class="click-zoom">
         <label>
@@ -463,8 +459,8 @@
 <td class="threebythreegrid" style="background: #add8e6;  border: 5px solid #ffffff;">
   <div class="popup12" onclick="myFunction12()">
     <span class="popuptext12" id="myPopup12">
-      <span class="portfolionexttwo popup11" onclick="myFunction11()">&#5176;</span>
-      <span class="portfolionexttwo popupseven" onclick="myFunctionseven()">&#5171;</span>
+      <span class="portfolionexttwo popup13" onclick="myFunction13()">&#5176;</span>
+      <span class="portfolionexttwo popup" onclick="myFunction()">&#5171;</span>
       <span class="close-btn-xy">&#10540;</span>
       <div class="click-zoom">
         <label>
