--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,8 @@
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
 		  </span>
-        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images oneflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
-        <img alt="Carousel Bootstrap Third" src="images/beyond-flat.jpg" class="portfolio_images twoflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 0.95;">
+        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images oneflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
+        <img alt="Carousel Bootstrap Third" src="images/beyond-flat.jpg" class="portfolio_images twoflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
 
       </div>
   </td>
@@ -169,12 +169,12 @@
       </div>
             <p class="titleforpopup">2017-2020 | Blakes.com web product launch</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Digital design for the launch of blakes.com - creation and integration of 50+ legal practice product pages and 700+ lawyer profile pages.  Visual design and UX UI.<br>
+            <p class="textforpopup">Digital design for the launch of blakes.com - creation and integration of 50+ legal practice product pages and 700+ lawyer profile pages.  Visual design and&nbsp;UX&nbsp;UI experience.<br>
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
 
       </div>
     </td>
@@ -196,10 +196,10 @@
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
           <p class="textforpopup">Visual and product design for BLG Beyond Legal Talent product pages and animated LinkedIn social post.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-            &nbsp;<a href="https://www.linkedin.com/posts/blglaw_legalinnovation-freelancelawyer-legalcareers-activity-6953355151785037824-d0F2" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Animated LinkedIn social post</a><br>
-            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
             &nbsp;<a href="https://www.blg.com/en/services/blg-beyond/legal-talent" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Product page</a>
-            ,&nbsp;<a href="https://www.blg.com/en/careers/legal-professionals/freelance-lawyer-jobs" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Careers page</a>
+            ,&nbsp;<a href="https://www.blg.com/en/careers/legal-professionals/freelance-lawyer-jobs" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Careers page</a><br>
+            <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+            &nbsp;<a href="https://www.linkedin.com/posts/blglaw_legalinnovation-freelancelawyer-legalcareers-activity-6953355151785037824-d0F2" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Animated LinkedIn social post</a>
           </p>
           </span>
           <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images" text-align="center" style="left: -50%; display: block; margin-left: auto; margin-right: auto; opacity: 0.9; transform: scale(3.95); left: -50%; position: relative; padding-bottom: 32%; padding-left: 5%;">
@@ -286,9 +286,7 @@
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">Event eVite design &mdash; includes front page layout and registration form.</p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
-
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
       </div>
     </td>
 
@@ -308,8 +306,8 @@
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">I brought my 10 years of fashion design experience abroad and resulted in a work opportunity with Dolce &amp; Gabbana in Milan; Responsibilities include preparation and assistance of their Fall 2013 and Spring 2014 collections.</p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/DG2022-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.7;">
-        <img alt="Carousel Bootstrap Third" src="images/DG-logo-invert.jpg" class="portfolio_images blakesdotcomtwo" style"filter: invert(100%); -webkit-filter: invert(100%);" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 1;">
+        <img alt="Carousel Bootstrap Third" src="images/DG2022-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.7;">
+        <img alt="Carousel Bootstrap Third" src="images/DG-logo-invert.jpg" class="portfolio_images twoflowtwo" style"filter: invert(100%); -webkit-filter: invert(100%);" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 1;">
 
       </div>
     </td>
@@ -334,8 +332,8 @@
         &nbsp;<a href="https://disneyconnect.com/dpep/consumer-products" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Disney Consumer Products</a>
         </p>
       </span>
-      <img alt="Carousel Bootstrap Third" src="images/disneyproduct-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
-      <img alt="Carousel Bootstrap Third" src="images/mickey100-disney-logo.jpg" class="portfolio_images blakesdotcomtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+      <img alt="Carousel Bootstrap Third" src="images/disneyproduct-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
+      <img alt="Carousel Bootstrap Third" src="images/mickey100-disney-logo.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
     </div>
     </td>
 
@@ -401,8 +399,8 @@
                 <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
                 <p class="textforpopup">Blakes event eVite design &mdash; <span style="font-style: italic;">Blakes Madness XII</span>&nbsp;; Includes front page layout and RSVP form</p>
               </span>
-            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images blakesdotcomone" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
-            <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images blakesdotcomtwo"></video>
+            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
+            <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images twoflowtwo"></video>
 
           </div>
         </td>
@@ -428,7 +426,7 @@
       </div>
             <p class="titleforpopup">2016 - 2017 | Design Manager for Thinkway Toys</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Consumer products, packaging &amp; product manual design &mdash; <span style="font-style: italic;">Star Wars Rogue 1</span></p>
+            <p class="textforpopup">Consumer products and packaging&mdash;<span style="font-style: italic;">Star Wars Rogue One; Disney/Pixar Cars 3; Universal - Minions Diespicable Me 3</span></p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/Starwars-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.8;">
       </div>
