--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,7 @@
             <input type="checkbox">
           <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop blakesfirst">
           <img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">
-          <img alt="Carousel Bootstrap Third" src="images/blakes-2.jpg" class="portfolio_images_pop blakesthird">
+          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">
 
         </label>
       </div>
@@ -350,7 +350,7 @@
   <tr>
 
 
-    <td class="threebythreegrid" style="background: #ffcba4;  border: 5px solid #ffffff;">
+    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup9" onclick="myFunction9()">
         <span class="popuptext9" id="myPopup9">
           <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5176;</span>
