yes let's do it

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani-right.png" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondright"> -->
             </label>
           </div>
-          <p class="titleforpopup">2020 | Visual and experience design for BLG BEYOND</p>
+          <p class="titleforpopup">2020 | Visual and Experience Design &mdash; BLG BEYOND</p>
           <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
           <p class="textforpopup">BLG Beyond were seeking new product pages that animate and demonstrate innovation for the newly launched suite of alternative legal services.  The results were a collection of product pages with impactful dynamic motion banners that are attention grabbing and maintain high page&nbsp;load&nbsp;speed.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
@@ -111,7 +111,7 @@
             <img alt="Carousel Bootstrap Third" src="images/blgwebstore-two.jpg" class="portfolio_images_pop blgbeyondtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
         </label>
       </div>
-      <p class="titleforpopup">2022 | Visual design for BLG Merchandise Store</p>
+      <p class="titleforpopup">2022 | Visual Design &mdash; BLG Merchandise Store</p>
       <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
       <p class="textforpopup">Visual design for client and staff portal - BLG Merchandise Store.<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
@@ -135,7 +135,7 @@
 
         </label>
       </div>
-        <p class="titleforpopup">2020 - 2021 | Product and visual design for BLG Google Ads campaign</p>
+        <p class="titleforpopup">2020 - 2021 | Product and Visual Design &mdash; BLG Google Ads campaign</p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
         <p class="textforpopup">We curated a product page as part of BLG's Google Ads campaign featuring BLG's top six practice groups which drew a broad audience and attracted over 3% click-through rate. The Google Ads campaign ended in 2021 and this landing page has since been deactivated.<br><br></p>
       </span>
@@ -167,7 +167,7 @@
 
         </label>
       </div>
-            <p class="titleforpopup">2017-2020 | Blakes.com web product launch</p>
+            <p class="titleforpopup">2017-2020 | Blakes.com Web Product Launch</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">Digital design for the launch of blakes.com - creation and integration of 50+ legal practice product pages and 700+ lawyer profile pages.  Visual design and&nbsp;UX&nbsp;UI experience.<br>
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
@@ -192,7 +192,7 @@
           <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 5%;">
         </label>
       </div>
-          <p class="titleforpopup">2022 | BLG BEYOND Legal Talent recruitment campaign</p>
+          <p class="titleforpopup">2022 | BLG BEYOND Legal Talent Recruitment Campaign</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
           <p class="textforpopup">Visual and product design for BLG Beyond Legal Talent product pages and animated LinkedIn social post.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
@@ -226,7 +226,7 @@
           <img alt="Carousel Bootstrap Third" src="images/Post-it-notes-16x9.gif" class="portfolio_images_pop" style="transform: scale(1); padding-top: 15%;">
         </label>
       </div>
-            <p class="titleforpopup">2023 | Visual design for BLG Technology M&A Trends</p>
+            <p class="titleforpopup">2023 | Visual Design &mdash; BLG Technology M&A Trends</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">Visual design for BLG M&A Trends landing page and animated LinkedIn social post.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
@@ -240,7 +240,7 @@
       </div>
     </td>
 
-<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
+<td class="threebythreegrid" style="background:#006994; border: 5px solid #ffffff; padding-left:10%;">
   <div class="popupfive" onclick="myFunctionfive()">
     <span class="popuptextfive" id="myPopupfive">
       <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span>
@@ -252,10 +252,9 @@
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
     </label>
   </div>
-        <p class="titleforpopup">2018 | Blakes event eVite design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span></p>
+        <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span></p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-
-        <p class="textforpopup">Event eVite design &mdash; includes front page layout and registration form.</p>
+        <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
 
       </span>
     <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(1.6); opacity: 0.7; padding-top:15%;">
@@ -282,9 +281,9 @@
           <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
         </label>
       </div>
-            <p class="titleforpopup">2018 | Blakes event eVite design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
+            <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Event eVite design &mdash; includes front page layout and registration form.</p>
+            <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
       </div>
@@ -302,7 +301,7 @@
           <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
         </label>
       </div>
-            <p class="titleforpopup">2012 - 2013 | Associate for Dolce &amp; Gabbana &mdash; Milan office</p>
+            <p class="titleforpopup">2012 - 2013 | Associate &mdash; Dolce &amp; Gabbana &mdash; Milan office</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">I brought my 10 years of fashion design experience abroad and resulted in a work opportunity with Dolce &amp; Gabbana in Milan; Responsibilities include preparation and assistance of their Fall 2013 and Spring 2014 collections.</p>
           </span>
@@ -395,9 +394,9 @@
 
                 </label>
               </div>
-                <p class="titleforpopup">2018 | Digital designer at Blake, Cassels and Graydon (Blakes LLP)</p>
+                <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">Blakes Madness XII</span></p>
                 <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-                <p class="textforpopup">Blakes event eVite design &mdash; <span style="font-style: italic;">Blakes Madness XII</span>&nbsp;; Includes front page layout and RSVP form</p>
+                <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
               </span>
             <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
             <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images twoflowtwo"></video>
@@ -424,7 +423,7 @@
           <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
         </label>
       </div>
-            <p class="titleforpopup">2016 - 2017 | Design Manager for Thinkway Toys</p>
+            <p class="titleforpopup">2016 - 2017 | Design Manager &mdash; Thinkway Toys</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
             <p class="textforpopup">Consumer products and packaging&mdash;<span style="font-style: italic;">Star Wars Rogue One; Disney/Pixar Cars 3; Universal - Minions Diespicable Me 3</span></p>
           </span>
@@ -445,9 +444,9 @@
       <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images_pop">
     </label>
   </div>
-        <p class="titleforpopup">2002 - 2010 | Fashion &amp; Accessories Designer at Mred</p>
+        <p class="titleforpopup">2002 - 2010 | Fashion &amp; Accessories Designer&nbsp;&mdash;&nbsp;Mred</p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-        <p class="textforpopup">Apparel &amp; accessories designer in menswear and womenswear &mdash; pr&ecirc;t-&agrave-porter </p>
+        <p class="textforpopup">Apparel &amp; accessories designer for menswear and womenswear label &mdash; pr&ecirc;t-&agrave-porter </p>
       </span>
     <img alt="Carousel Bootstrap Third" src="images/mred-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
   </div>
@@ -465,7 +464,7 @@
       <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
     </label>
   </div>
-        <p class="titleforpopup">2010 - 2011| Desktop Publisher for National Bank Financial</p>
+        <p class="titleforpopup">2010 - 2011| Desktop Publisher &nbsp; National Bank Financial</p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
         <p class="textforpopup">Desktop publisher and graphic designer for National Bank Financial - Institutional Equities; digital news publication and daily bulletins, eVites &amp; brochures</p>
       </span>
