refinement to desktop index and portfolio hamburger

--- a/portfolio.html
+++ b/portfolio.html
@@ -389,9 +389,10 @@
               <div class="click-zoom">
                 <label>
                   <input type="checkbox">
-                  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop blgbeyondone">
-                  <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images_pop blgbeyondtwo" ></video>
-
+                  <img alt="Blakes Madness XII" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop blgbeyondone">
+                  <video autoplay loop muted playsinline class="portfolio_images_pop blgbeyondtwo" width="96VW" height="auto" frameborder="0" >
+                    <source src="images/blakes-madness.mp4" type="video/mp4">
+                  </video>
                 </label>
               </div>
                 <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">Blakes Madness XII</span></p>
